<resources>
    <string name="app_name">ThumbDrift</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fromHint">From</string>
    <string name="toHint">To</string>
    <string name="dateHint">Date</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="demoPassword">123456</string>
    <string name="demoEmail">peter@ait.hu</string>
    <string name="rightarrow">→</string>
    <string name="spacesLabel">Spaces: </string>
    <string name="fromLabel">From: </string>
    <string name="toLabel">To: </string>
    <string name="dateLabel">Date: </string>
    <string name="btnEdit">Edit</string>
    <string name="btn_driver_details">Driver Details</string>
    <string name="nameLabel">Name:</string>
    <string name="descriptionLabel">Description:</string>
    <string name="genderLabel">Gender:</string>
    <string name="ageLabel">Age:</string>
    <string name="btnedit_profile">Update Profile</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date_dd_mm_yy">Date: dd/mm/yy</string>
    <string name="seats_available">Seats Available</string>
    <string name="etname">Name</string>
    <string name="etdescription">Description</string>
    <string name="etgender">Gender</string>
    <string name="etage">Age</string>
    <string name="would_be_willing_to_drive">Would be willing to drive</string>
    <string name="contact_driver">Contact driver</string>
    <string name="offer_ride">Offer Ride</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="offer_a_ride">Offer a ride</string>
    <string name="user_info">User Info</string>
</resources>
