<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
            android:id="@+id/etOfferFrom"
            android:hint="@string/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/etOfferTo"
            android:hint="@string/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/etOfferDate"
            android:hint="@string/date_dd_mm_yy"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/etOfferSeats"
            android:hint="@string/seats_available"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>