<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

        <TextView
                android:id="@+id/tvFromLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                android:text="@string/fromLabel"
        />
        <TextView
                android:id="@+id/tvFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintStart_toEndOf="@id/tvFromLabel"
                card_view:layout_constraintTop_toTopOf="parent"
        />

        <TextView
                android:id="@+id/right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/tvFromLabel"
                card_view:layout_constraintEnd_toStartOf="@id/tvTo"
                android:text="@string/rightarrow"/>

        <TextView
                android:id="@+id/tvToLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintStart_toEndOf="@id/tvTo"
                card_view:layout_constraintTop_toTopOf="parent"
                android:text="@string/toLabel"
        />
        <TextView
                android:id="@+id/tvTo"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvDateLabel"
                card_view:layout_constraintTop_toBottomOf="@id/tvFrom"
                card_view:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateLabel"/>
        <TextView
                android:id="@+id/tvDate"
                card_view:layout_constraintTop_toBottomOf="@id/tvFrom"
                card_view:layout_constraintStart_toEndOf="@id/tvDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvNumberOfSeatsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@id/tvDate"
                card_view:layout_constraintStart_toStartOf="parent"
                android:text="@string/spacesLabel"/>
        <TextView
                android:id="@+id/tvNumberOfSeats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@id/tvDate"
                card_view:layout_constraintStart_toEndOf="@id/tvNumberOfSeatsLabel"/>

        <Button
                android:id="@+id/btnDriverDetails"
                android:text="Driver Details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/tvNumberOfSeats"/>

        <Button android:id="@+id/btnEdit"
                android:text="@string/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:layout_constraintEnd_toEndOf="@id/btnDelete"
                card_view:layout_constraintTop_toBottomOf="@id/tvNumberOfSeats"/>

        <Button android:id="@+id/btnDelete"
                android:text="Delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/tvNumberOfSeats"/>
    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>