<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/search_bar"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:weightSum="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/etFrom"
                android:hint="@string/from"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/etTo"
                android:hint="@string/to"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/etDate"
                android:inputType="date"
                android:hint="@string/date"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ImageButton
                android:id="@+id/btnSearch"
                android:src="@drawable/ic_action_filter"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:padding="20dp"

            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


</LinearLayout>